# QuickReaderPDF

./: CONTRIBUTING.md  LICENSE  README.md  __init__.py  __main__.py  htmltopdf.py  pdfeditor.py  pyproject.toml  requirements.txt  setup.py  temp.py
.github/workflows/: pylint.yml  setup.yaml
.workflows/: setup.yaml
QuickReaderPDF/: __init__.py  __main__.py  pdfeditor.py
QuickReaderPDF/tests/: test_all.py
docs/: QuickReaderPDF.doctree  QuickReaderPDF.html  QuickReaderPDF.rst  QuickReaderPDF.tests.rst  api.html  conf.py  environment.pickle  examples.md  genindex.html  index.html  index.md  index.md.txt  index.rst  installation.html  installation.rst  modules.doctree  modules.html  modules.rst.txt  objects.inv  pdfeditor.rst  py-modindex.html  search.html  searchindex.js  setup.doctree  setup.html  usage.doctree  usage.rst.txt
docs/_build/doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree
docs/_build/html/: .buildinfo  QuickReaderPDF.html  examples.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: api.rst.txt  examples.md.txt  index.rst.txt  installation.rst.txt
tests/: test_all.py
